testsuite/bsc.evaluator/uninit/VectorUninitErr6.bsv.bsc-ccomp-out.expected
checking package dependencies
compiling VectorUninitErr6.bsv
code generation for sysVectorUninitErr6 starts
Error: "VectorUninitErr6.bsv", line 6, column 24: (G0028)
  `v[6]' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "VectorUninitErr6.bsv",
  line 12, column 8.
  During elaboration of `sysVectorUninitErr6' at "VectorUninitErr6.bsv", line
  4, column 8.
Error: "VectorUninitErr6.bsv", line 6, column 24: (G0028)
  `v[5]' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "VectorUninitErr6.bsv",
  line 12, column 8.
  During elaboration of `sysVectorUninitErr6' at "VectorUninitErr6.bsv", line
  4, column 8.
Error: "VectorUninitErr6.bsv", line 6, column 24: (G0028)
  `v[2]' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "VectorUninitErr6.bsv",
  line 12, column 8.
  During elaboration of `sysVectorUninitErr6' at "VectorUninitErr6.bsv", line
  4, column 8.
Error: "VectorUninitErr6.bsv", line 6, column 24: (G0028)
  `v[0]' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "VectorUninitErr6.bsv",
  line 12, column 8.
  During elaboration of `sysVectorUninitErr6' at "VectorUninitErr6.bsv", line
  4, column 8.
